[gd_scene load_steps=3 format=3 uid="uid://bxvhjubqn1bvy"]

[ext_resource type="Script" uid="uid://del6oeucpakdp" path="res://Script/settings.gd" id="1_4geyq"]

[sub_resource type="LabelSettings" id="LabelSettings_4geyq"]
font_size = 12

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4geyq")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Left" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Gauche (A ou Flèche de gauche par défaut)"

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BindMoveLeft" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "A"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Right" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Droite (D ou Flèche de droite par défaut)"

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BindMoveRight" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "D"

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Up" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Haut (W ou Flèche du Haut par défaut)"

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BindMoveUp" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "W"

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Down" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Bas (S ou Flèche du bas par défaut)"

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BindMoveDown" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "S"

[node name="Description_title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Description du jeu:"

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Jeu de survie à base de vagues d'ennemies.
Entre chaque vague, une boutique est disponible et permet de s'équiper d'avantage pour les vagues 
suivantes.
À toutes les 5 vagues, c'est une vague spéciale où il n'y a pas d'ennemi standard, il suffit simplement de 
trouver l'oeuf de pâque, mais attention au dangers naturels... "
label_settings = SubResource("LabelSettings_4geyq")

[node name="HintLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Appuie sur une touche pour continuer..."

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retour au Menu Principal"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
